[add] readme.txt

--- a/FastPushClient.NET.csproj
+++ b/FastPushClient.NET.csproj
@@ -192,6 +192,7 @@
     <ItemGroup>
       <Content Include="NLog.config" />
       <Content Include="NLog.xsd" />
+      <Content Include="readme.md" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
